Add toggle to show cascaded command attributes